// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listing Interest Page renders listing interest page with error response 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        DAHLIA San Francisco Housing Portal
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:title"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:description"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        name="description"
      />
      <meta
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span
              class="feedback-link"
            >
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link  "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        data-testid="main-content-test-id"
        id="main-content"
      >
        <section
          class="bg-gray-300"
        >
          <div
            class="mt-4 bg-white rounded-lg border border-solid"
          >
            <div
              class="pt-8 pb-8 text-center border-b border-solid"
            >
              <div
                class="text-2xl"
              >
                ERROR
              </div>
              <div
                class="mt-4 text-sm"
              >
                INVALID REQUEST
              </div>
            </div>
          </div>
        </section>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Listing Interest Page renders listing interest page with expired response 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        DAHLIA San Francisco Housing Portal
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:title"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:description"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        name="description"
      />
      <meta
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span
              class="feedback-link"
            >
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link  "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        data-testid="main-content-test-id"
        id="main-content"
      >
        <section
          class="bg-gray-300"
        >
          <article
            class="form-card "
          >
            <div
              class="form-card__header"
            >
              <header
                class="form-card__header_group form-card__header_title"
              >
                <h1
                  class=""
                >
                  TEST 1300 22nd (Knox)
                </h1>
              </header>
              <div
                class="form-card__header_nav"
              >
                <a
                  href="/listings/a0W0P00000DZYzVUAX"
                  target="_blank"
                >
                  Go to building details
                </a>
              </div>
            </div>
          </article>
          <div
            class="mt-4 bg-white rounded-lg border border-solid"
          >
            <div
              class="pt-8 pb-8 text-center border-b border-solid"
            >
              <div
                class="text-2xl"
              >
                The deadline to respond has already passed
              </div>
              <div
                class="mt-4 text-sm"
              >
                Your answer was not submitted
              </div>
            </div>
            <div
              class="p-8 bg-blue-100"
            >
              <p>
                If you are still interested in an apartment at 
                <a
                  href="/listings/a0W0P00000DZYzVUAX"
                  target="_self"
                >
                  TEST 1300 22nd (Knox)
                </a>
                <span
                  class="text-neutral-600"
                >
                  , contact: 
                </span>
              </p>
              <ul
                class="mt-6"
              >
                <li>
                  <span
                    class="text-lg leading-6"
                  >
                    Test Test
                  </span>
                </li>
                <li>
                  <a
                    href="tel:+1XXXXXXXXXX"
                  >
                    (XXX) XXX-XXXX
                  </a>
                </li>
                <li>
                  <a
                    href="mailto:test@test.com"
                  >
                    test@test.com
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </section>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Listing Interest Page renders listing interest page with no response 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        DAHLIA San Francisco Housing Portal
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:title"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:description"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        name="description"
      />
      <meta
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span
              class="feedback-link"
            >
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link  "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        data-testid="main-content-test-id"
        id="main-content"
      >
        <section
          class="bg-gray-300"
        >
          <article
            class="form-card "
          >
            <div
              class="form-card__header"
            >
              <header
                class="form-card__header_group form-card__header_title"
              >
                <h1
                  class=""
                >
                  TEST 1300 22nd (Knox)
                </h1>
              </header>
              <div
                class="form-card__header_nav"
              >
                <a
                  href="/listings/a0W0P00000DZYzVUAX"
                  target="_blank"
                >
                  Go to building details
                </a>
              </div>
            </div>
          </article>
          <div
            class="mt-4 bg-white rounded-lg border border-solid"
          >
            <div
              class="pt-8 pb-8 text-center border-b border-solid"
            >
              <div
                class="text-2xl"
              >
                Thank you for your response
              </div>
              <div
                class="mt-4 text-sm"
              >
                You answered: 
                <span
                  class="font-bold"
                >
                  No, withdraw my application
                </span>
              </div>
            </div>
          </div>
        </section>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Listing Interest Page renders listing interest page with yes response 1`] = `
<DocumentFragment>
  <div
    class="notranslate site-wrapper"
  >
    <div
      class="site-content"
    >
      <title
        class="notranslate"
      >
        DAHLIA San Francisco Housing Portal
      </title>
      <meta
        charset="utf-8"
      />
      <meta
        content="IE=edge"
        http-equiv="X-UA-Compatible"
      />
      <meta
        content="width=device-width, initial-scale=1"
        name="viewport"
      />
      <meta
        content="M1zcm6GGM6sHSF_jvkq254DbYAj94JYbFC7ArZDAXlg"
        name="google-site-verification"
      />
      <meta
        content="http://localhost/"
        property="og:url"
      />
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:title"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:description"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        name="description"
      />
      <meta
        property="og:image"
      />
      <meta
        content="DAHLIA San Francisco Housing Portal"
        property="og:site_name"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <header
        class="site-header"
      >
        <a
          class="site-header__skip-link"
          href="#main-content"
        >
          Skip to main content
        </a>
        <div
          class="language-bar"
        >
          <div
            class="language-bar__inner"
          >
            <nav
              aria-label="Choose your language"
              class="language-nav"
            >
              <ul
                class="language-nav__list"
              >
                <li>
                  <button
                    class="language-nav__list-button is-active"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Español
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    中文
                  </button>
                </li>
                <li>
                  <button
                    class="language-nav__list-button"
                    type="button"
                  >
                    Filipino
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="site-header__notice "
        >
          <div
            class="site-header__notice-text"
          >
            <span
              class="feedback-link"
            >
              We'd love to get 
              <a
                href="https://airtable.com/shrw64DubWTQfRkdo"
                target="_blank"
              >
                your feedback.
              </a>
            </span>
          </div>
        </div>
        <nav
          aria-label="main navigation"
          class="site-header__container"
          role="navigation"
        >
          <div
            class="site-header__base  site-header__base-wrapped"
          >
            <div
              class="site-header__logo-container site-header__logo-width-med"
              id="site-header-logo"
            >
              <a
                aria-label="DAHLIA San Francisco Housing Portal"
                class="site-header__logo translate site-header__custom-width"
                href="/"
                target="_self"
              >
                <div
                  class="site-header__logo-content site-header__image-only-container"
                >
                  <img
                    alt="Site logo"
                    class="site-header__logo-image site-header__image-only"
                  />
                </div>
              </a>
            </div>
            <div
              class="site-header__navbar-menu site-header__navbar-wrapped"
              id="site-header-links"
            >
              <a
                class="site-header__link  "
                data-testid="Rent-0"
                href="/listings/for-rent"
                target="_self"
              >
                <div>
                  Rent
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Buy-1"
                href="/listings/for-sale"
                target="_self"
              >
                <div>
                  Buy
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="My Favorites-2"
                href="/favorites"
                target="_self"
              >
                <div>
                  My Favorites
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Get Assistance-3"
                href="/get-assistance"
                target="_self"
              >
                <div>
                  Get Assistance
                </div>
              </a>
              <a
                class="site-header__link  "
                data-testid="Sign In-4"
                href="/sign-in"
                target="_self"
              >
                <div>
                  Sign In
                </div>
              </a>
            </div>
          </div>
        </nav>
      </header>
      <main
        data-testid="main-content-test-id"
        id="main-content"
      >
        <section
          class="bg-gray-300"
        >
          <article
            class="form-card "
          >
            <div
              class="form-card__header"
            >
              <header
                class="form-card__header_group form-card__header_title"
              >
                <h1
                  class=""
                >
                  TEST 1300 22nd (Knox)
                </h1>
              </header>
              <div
                class="form-card__header_nav"
              >
                <a
                  href="/listings/a0W0P00000DZYzVUAX"
                  target="_blank"
                >
                  Go to building details
                </a>
              </div>
            </div>
          </article>
          <div
            class="mt-4 bg-white rounded-lg border border-solid"
          >
            <div
              class="pt-8 pb-8 text-center border-b border-solid"
            >
              <div
                class="text-2xl"
              >
                Thank you for your response
              </div>
              <div
                class="mt-4 text-sm"
              >
                You answered: 
                <span
                  class="font-bold"
                >
                  Yes, I'm still interested
                </span>
              </div>
            </div>
            <div
              class="p-8 bg-blue-100"
            >
              <span
                class="font-bold"
              >
                What to expect
              </span>
              <ul
                class="p-4 space-y-4 list-disc"
              >
                <li>
                  The leasing agent will contact you when it's your turn to move forward with your application.
                </li>
                <li>
                  We will send you an email to let you know once all units get leased.
                </li>
                <li>
                  We will contact you again if more units become available in the next 12 months.
                </li>
              </ul>
              <a
                href="https://www.sf.gov/after-rental-housing-lottery"
                target="_blank"
              >
                Learn more about what happens after the housing lottery.
              </a>
            </div>
          </div>
        </section>
      </main>
    </div>
    <footer
      class="site-footer"
    >
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <img
            alt=""
            data-testid="footer-logo-test-id"
          />
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section py-2"
        >
          <p
            class="text-gray-500"
          >
            <span>
              DAHLIA: San Francisco Housing Portal is a project of the 
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-housing-and-community-development"
                target="_blank"
              >
                Mayor's Office of Housing and Community Development
              </a>
            </span>
          </p>
          <p
            class="text-xs mt-4 text-gray-500"
          >
            <span>
              in partnership with
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/city-administrator/digital-services"
                target="_blank"
              >
                San Francisco Digital Services
              </a>
              <br />
              <a
                class="text-white"
                href="https://sf.gov/departments/mayors-office-innovation"
                target="_blank"
              >
                Mayor's Office of Civic Innovation
              </a>
            </span>
          </p>
        </div>
      </div>
      <div
        class="footer-row "
      >
        <div
          class="footer-row__section pb-8"
        >
          <p
            class="text-sm"
          >
            For listing and application questions, please contact the agent displayed on the listing. 
            <br />
            For general program inquiries, you may call MOHCD at 415-701-5500.
          </p>
        </div>
      </div>
      <section
        class="footer-sock"
      >
        <div
          class="footer-sock__inner"
        >
          <p
            class="footer-copyright"
          >
            © City & County of San Francisco
          </p>
          <nav
            aria-label="Footer"
            class="footer-nav"
          >
            <a
              class="text-gray-500"
              href="https://airtable.com/shrw64DubWTQfRkdo"
              target="_blank"
            >
              Give Feedback
            </a>
            <a
              class="text-gray-500"
              href="mailto:sfhousinginfo@sfgov.org"
              target="_self"
            >
              Contact
            </a>
            <a
              class="text-gray-500"
              href="/disclaimer"
              target="_self"
            >
              Disclaimer
            </a>
            <a
              class="text-gray-500"
              href="/privacy"
              target="_self"
            >
              Privacy Policy
            </a>
          </nav>
        </div>
      </section>
    </footer>
  </div>
</DocumentFragment>
`;
